--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "lepipette",
   "version": "0.1.0",
   "description": "Lightweight Box Game. Props to Édouard Lucas.",
-  "main": "index.js",
+  "engines": {
+    "node": "10.x"
+  },
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
@@ -12,6 +17,21 @@
   },
   "author": "AEP",
   "license": "GPL-3.0",
+  "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "core-js": "^3.1.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "next": "^9.0.0",
+    "pusher": "^2.2.1",
+    "pusher-js": "^4.4.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-lineto": "^3.1.3"
+  },
   "bugs": {
     "url": "https://github.com/aetherprods/LePipette/issues"
   },
