--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lepipette",
+  "name": "lepipoette",
   "version": "0.1.0",
   "description": "Lightweight Box Game. Props to Édouard Lucas.",
   "engines": {
@@ -13,14 +13,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aetherprods/LePipette.git"
+    "url": "git+https://github.com/aetherprods/LePipoette.git"
   },
   "author": "AEP",
   "license": "GPL-3.0",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
+    "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
@@ -33,7 +35,7 @@
     "react-lineto": "^3.1.3"
   },
   "bugs": {
-    "url": "https://github.com/aetherprods/LePipette/issues"
+    "url": "https://github.com/aetherprods/LePipoette/issues"
   },
-  "homepage": "https://github.com/aetherprods/LePipette#readme"
+  "homepage": "https://github.com/aetherprods/LePipoette#readme"
 }
