--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lepipoette",
-  "version": "0.1.0",
+  "name": "la-pipoette",
+  "version": "0.2.0",
   "description": "Lightweight Box Game. Props to Édouard Lucas.",
   "engines": {
     "node": "10.x"
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aetherprods/LePipoette.git"
+    "url": "git+https://github.com/aetherprods/La-Pipoette.git"
   },
   "author": "AEP",
   "license": "GPL-3.0",
@@ -35,7 +35,7 @@
     "react-lineto": "^3.1.3"
   },
   "bugs": {
-    "url": "https://github.com/aetherprods/LePipoette/issues"
+    "url": "https://github.com/aetherprods/La-Pipoette/issues"
   },
-  "homepage": "https://github.com/aetherprods/LePipoette#readme"
+  "homepage": "https://github.com/aetherprods/La-Pipoette#readme"
 }
