--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach by Process ID",
+            "processId": "26334"
+        },
+        {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome",
